--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,15 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.7.9",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.476.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "date-fns": "^2.30.0"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.2.0",
+    "tailwindcss": "^4.0.8",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "daisyui": "^5.0.0-beta.8",
     "eslint": "^9.9.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
