--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.28.0",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.1"
   },
